Small fixes and button alignment fixed

--- a/scss/ionic.app.scss
+++ b/scss/ionic.app.scss
@@ -135,11 +135,12 @@ $ionicons-font-path: "../lib/ionic/fonts" !default;
   color: white;
 }
 
-#tutorialbigdiv {
-  height: 88%;
-}
-#tutorialslidebox {
+#tutorial-big-div {
   height: 90%;
+}
+#tutorial-skip-button{
+  margin: auto;
+  text-align: center;
 }
 
 .item-divider-text {
